--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> 
 <main>
 	<h1>JavaScript Video Controls</h1>
-	console.log(this.value)
+	<!-- console.log(this.value) -->
 	<div class = "options">
 		<button  id = "play">Play Video</button>
 		<button  id = "pause">Pause Video</button>
